--- a/Frameworks/iOS/fat/MUXSDKStatsTHEOplayer.framework/Info.plist
+++ b/Frameworks/iOS/fat/MUXSDKStatsTHEOplayer.framework/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>18F132</string>
+	<string>18G87</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -28,19 +28,19 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>16B91</string>
+	<string>16G73</string>
 	<key>DTPlatformName</key>
 	<string>iphoneos</string>
 	<key>DTPlatformVersion</key>
-	<string>12.1</string>
+	<string>12.4</string>
 	<key>DTSDKBuild</key>
-	<string>16B91</string>
+	<string>16G73</string>
 	<key>DTSDKName</key>
-	<string>iphoneos12.1</string>
+	<string>iphoneos12.4</string>
 	<key>DTXcode</key>
-	<string>1010</string>
+	<string>1030</string>
 	<key>DTXcodeBuild</key>
-	<string>10B61</string>
+	<string>10G8</string>
 	<key>MinimumOSVersion</key>
 	<string>11.0</string>
 	<key>UIDeviceFamily</key>
