--- a/MUXSDKStatsTHEOplayer/Podfile
+++ b/MUXSDKStatsTHEOplayer/Podfile
@@ -1,5 +1,6 @@
 target 'MUXSDKStatsTHEOplayer' do
   platform :ios, '9.0'
 
-  pod 'Mux-Stats-Core', '~>2.0.0'
+  pod 'Mux-Stats-Core', '~>2.0'
+  pod 'google-cast-sdk'
 end
