--- a/apps/DemoApp/Podfile
+++ b/apps/DemoApp/Podfile
@@ -1,5 +1,6 @@
 platform :ios, '11.0'
 
 target 'DemoApp' do
-  pod 'Mux-Stats-THEOplayer', :path => '../../'
+  use_frameworks!
+  pod 'Mux-Stats-THEOplayer', '~> 0.1'
 end
