--- a/apps/DemoApp/Podfile
+++ b/apps/DemoApp/Podfile
@@ -2,5 +2,5 @@ platform :ios, '11.0'
 
 target 'DemoApp' do
   use_frameworks!
-  pod 'Mux-Stats-THEOplayer', '~> 0.1'
+  pod 'Mux-Stats-THEOplayer', :path => '../..'
 end
