--- a/apps/DemoApp/Podfile
+++ b/apps/DemoApp/Podfile
@@ -3,5 +3,6 @@ platform :ios, '11.0'
 target 'DemoApp' do
   use_frameworks!
   pod 'Mux-Stats-THEOplayer', :path => '../..'
+  pod 'THEOplayerSDK-basic', '~> 2.89'
   #pod 'Mux-Stats-THEOplayer', '~> 0.4'
 end
